--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,19 +2,37 @@ pipeline{
 
 	agent any
 
+	environment {
+		DOCKERHUB_CREDENTIALS=credentials('dockerhub')
+	}
+
 	stages {
+
+
 		stage('Build') {
 
 			steps {
 				sh 'sudo docker build -t cyberpunks77/geeksproject:latest .'
 			}
 		}
+        stage('Login') {
 
+			steps {
+				sh ' echo $DOCKERHUB_CREDENTIALS_PSW | sudo docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
+			}
+		}
 		stage('Push') {
 
 			steps {
-				sh 'sudo docker push cyberpunks77/geeksproject'
+				sh 'sudo docker push cyberpunks77/geeksproject:latest'
 			}
 		}
 	}
+
+	post {
+		always {
+			sh 'sudo docker logout'
+		}
+	}
+
 }
